<resources>
    <string name="app_name"> To-Do Alarm </string>
    <string name="action_settings"> Settings </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_start"> On </string>
    <string name="btn_stop"> Off </string>
    <string name="add_task"> Add Task </string>
    <string name="task_info"> Enter a new task </string>
    <string name="first_time_greeting"> Hi! Please set an alarm </string>
    <string name="done"> X </string>
    <string name="example"> example </string>
    <string name="accept"> Set Name </string>
    <string name="privacy"> Privacy Notice: </string>
    <string name="todotab">To Do</string>
    <string name="caltab">Calendar</string>
    <string name="dialog_about">To-Do Alarm 7.0 by DavesProjects</string>
    <string name="action_about">About</string>
    <string name="timer_title">Timer Complete</string>
    <string name="please_allow_alarm">Please allow exact alarm permissions</string>

    <!-- calendar -->
    <string name="cal_month_top">%1s %1s</string>
    <string name="cal_open_err">Unable to edit this calendar event</string>
    <string name="month">Month</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- calendar options -->
    <string name="cal_opt_title">Add items from the following calendars to your to-do list</string>

    <!-- settings -->
    <string name="settings_title"> Settings </string>
    <string name="song_none">Song: None</string>
    <string name="song">Song</string>
    <string name="wake_up_to_song">Wake Up to Song</string>
    <string name="reset_tasks">Reset Tasks</string>
    <string name="tasks_completed">Tasks completed:</string>
    <string name="name_hint">Name…</string>
    <string name="speak_todo_list">Speak To-Do List</string>
    <string name="calendar_options">Calendar Options</string>
    <string name="change_calendar_options">Change</string>
    <string name="explain_settings"> Please use the field
        below to set the name you wish to be greeted with every morning. If you do not
        wish to be greeted by name, just leave the field blank. </string>
    <string name="please_allow_audio">Please allow audio permissions</string>

    <!-- notif -->
    <string name="channel_name">todo.alarm.channel.name</string>
    <string name="channel_description">todo.alarm.channel.desc</string>
    <string name="open">Open</string>
    <string name="there_is_an_active_alarm">Active alarm going off now</string>

</resources>
