<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/black"
                android:text="@string/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:textSize="20sp"
                android:id="@+id/textView" />

            <TextView
                android:text="@string/explain_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:id="@+id/textView1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_hint"
                    android:layout_margin="2sp"
                    android:ems="10"
                    android:id="@+id/editName" />

                <Button
                    android:layout_weight="1"
                    android:text="@string/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:id="@+id/btnAcceptName" />

            </LinearLayout>



            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:text="@string/tasks_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_weight="4"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTaskComp" />

                <Button
                    android:layout_weight="2"
                    android:text="@string/reset_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/btnResetTasks" />

            </LinearLayout>



            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/songSwitch"
                android:layout_marginBottom="9sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wake_up_to_song" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_weight="4"
                    android:id="@+id/textSelectedSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_none" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/buttonSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song" />

            </LinearLayout>



            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/todoSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speak_todo_list" />


            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:text="@string/calendar_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_weight="4"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_weight="2"
                    android:text="@string/change_calendar_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/btnChangeCalOpts" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>